Update src/Pathfinder.java